Use "data" as filename when copying data urls

BUG: 379093